# simplexhc

./: .gitignore  LICENSE  README.md  generate-haddocks.sh  set_llvm_paths.sh  set_llvm_paths.source  simplexcc.cabal  simplexhc.cabal  stack.yaml
app/: Main.hs
src/: :w  ColorUtils.hs  IR.hs  IRBuilder.hs  IRToLLVM.hs  LoweringFFI.hs  OrderedMap.hs  Stg.hs  StgEvalApplyMachine.hs  StgLLVMBackend.hs  StgLanguage.hs  StgMachine.hs  StgParser.hs  StgPushEnterMachine.hs  StgToIR.hs
stg-programs/: case-constructor.stg  case-raw-number.stg  constructor.stg  id.stg  let.stg  only-combinators.stg  partial-application.stg  plus.stg  raw-number-expr.stg  s-k-k-3.stg  simple.stg  updatable-constructor.stg  updatable-fn-calls.stg
test/: Spec.hs
