name:                simplexhc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simplexhc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     StgLanguage,
                       StgParser,
                       StgMachine,
                       ColorUtils

  build-depends:       base >= 4.7 && < 5,
                       lens,
                       transformers,
                       containers,
                       parsec,
                       MissingH,
                       mtl,
                       pretty,
                       hoist-error,
                       ansi-terminal


  default-language:    Haskell2010

executable simplexhc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simplexhc
                     , lens
                     , haskeline
                     , transformers
                     , ansi-terminal
  default-language:    Haskell2010

test-suite simplexhc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simplexhc
                     , tasty
                     , tasty-hunit
                     , lens
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simplexhc
