name:                simplexhc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simplexhc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     StgLanguage,
                       StgParser,
                       StgPushEnterMachine,
                       Stg,
                       ColorUtils,
                       StgLLVMBackend,
                       IR,
                       IRBuilder
                       -- LoweringFFI

  build-depends:       base >= 4.7 && <= 5,
                       lens,
                       transformers,
                       containers,
                       parsec,
                       megaparsec >= 5.2.0,
                       MissingH,
                       bytestring,
                       mtl,
                       -- for my own use.
                       prettyprinter,
                       -- for trifecta
                       ansi-wl-pprint,
                       hoist-error,
                       ansi-terminal,
                       parsers,
                       trifecta,
                       unordered-containers,
                       llvm-hs >= 4.1.0,
                       llvm-hs-pure >= 4.1.0,
                       text

  extra-lib-dirs:      /usr/local/lib
  -- extra-libraries:     lowering


  default-language:    Haskell2010

executable simplexhc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simplexhc
                     , lens
                     , haskeline
                     , transformers
                     , ansi-terminal
                     , bytestring
                     , optparse-applicative
  default-language:    Haskell2010

  extra-lib-dirs:      /usr/local/lib
  -- extra-libraries:     lowering

test-suite simplexhc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base
                     , simplexhc
                     , tasty
                     , tasty-hunit
                     , lens
                     , containers
                     , megaparsec
                     , directory
  install-includes:  constructor.stg
                     , id.stg
                     , let.stg
                     , plus.stg
                     , raw-number-expr.stg
                     , s-k-k-3.stg
                            default-language:    Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simplexhc
